--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,23 +30,36 @@ def getSecretValueOf(String key){
     return "\"" + p.getProperty(key) + "\""
 }
 
+ext {
+    supportLibVersion = '24.1.1'
+    retrofitVersion = '2.1.0'
+    okHttpVersion = '3.3.1'
+    stethoVersion = '1.3.1'
+    daggerVersion = '2.2'
+    timberVersion = '4.1.2'
+    ottoVersion = '1.3.8'
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile "com.android.support:appcompat-v7:$supportLibVersion"
 
     //network
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
-    compile 'com.facebook.stetho:stetho:1.3.1'
-    compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+    compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    compile "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
+    compile "com.facebook.stetho:stetho:$stethoVersion"
+    compile "com.facebook.stetho:stetho-okhttp3:$stethoVersion"
 
     //dagger
-    compile 'com.google.dagger:dagger:2.2'
-    apt 'com.google.dagger:dagger-compiler:2.2'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
+    compile "com.google.dagger:dagger:$daggerVersion"
+    apt "com.google.dagger:dagger-compiler:$daggerVersion"
+    provided "org.glassfish:javax.annotation:10.0-b28"
 
     //logging
-    compile 'com.jakewharton.timber:timber:4.1.2'
+    compile "com.jakewharton.timber:timber:$timberVersion"
+
+    //event bus
+    compile "com.squareup:otto:$ottoVersion"
 }
