--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
         applicationId "com.akarbowy.tagop"
@@ -31,19 +32,21 @@ def getSecretValueOf(String key){
 }
 
 ext {
-    supportLibVersion = '24.1.1'
+    supportLibVersion = '24.2.0'
     retrofitVersion = '2.1.0'
     okHttpVersion = '3.3.1'
     stethoVersion = '1.3.1'
-    daggerVersion = '2.2'
+    daggerVersion = '2.6.1'
     timberVersion = '4.1.2'
     ottoVersion = '1.3.8'
+    butterknfieVersion = '8.4.0'
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile "com.android.support:appcompat-v7:$supportLibVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibVersion"
 
     //network
     compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
@@ -62,4 +65,8 @@ dependencies {
 
     //event bus
     compile "com.squareup:otto:$ottoVersion"
+
+    //binding
+    compile "com.jakewharton:butterknife:$butterknfieVersion"
+    apt "com.jakewharton:butterknife-compiler:$butterknfieVersion"
 }
