--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".presentation.posts.PostsActivity"
+            android:label="@string/title_activity_posts"
+            android:parentActivityName=".presentation.search.MainSearchActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.akarbowy.tagop.presentation.search.MainSearchActivity" />
+        </activity>
     </application>
 
 </manifest>
