--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
     }
 }
 
-def getSecretValueOf(String key){
+def getSecretValueOf(String key) {
     def Properties p = new Properties()
     p.load(new FileInputStream(new File("secrets.properties")))
     return "\"" + p.getProperty(key) + "\""
@@ -40,6 +40,7 @@ ext {
     timberVersion = '4.1.2'
     ottoVersion = '1.3.8'
     butterknfieVersion = '8.4.0'
+    ormVersion = '5.0'
 }
 
 dependencies {
@@ -60,6 +61,10 @@ dependencies {
     apt "com.google.dagger:dagger-compiler:$daggerVersion"
     provided "org.glassfish:javax.annotation:10.0-b28"
 
+    //database
+    compile "com.j256.ormlite:ormlite-core:$ormVersion"
+    compile "com.j256.ormlite:ormlite-android:$ormVersion"
+
     //logging
     compile "com.jakewharton.timber:timber:$timberVersion"
 
@@ -69,4 +74,5 @@ dependencies {
     //binding
     compile "com.jakewharton:butterknife:$butterknfieVersion"
     apt "com.jakewharton:butterknife-compiler:$butterknfieVersion"
+    compile 'com.android.support:design:24.2.0'
 }
