--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,13 +41,17 @@ ext {
     ottoVersion = '1.3.8'
     butterknfieVersion = '8.4.0'
     ormVersion = '5.0'
+    frescoVersion = '0.13.0'
+    frescoImageViewerVersion = '0.1.0'
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile "com.android.support:recyclerview-v7:$supportLibVersion"
+    compile "com.android.support:design:$supportLibVersion"
 
     //network
     compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
@@ -74,5 +78,8 @@ dependencies {
     //binding
     compile "com.jakewharton:butterknife:$butterknfieVersion"
     apt "com.jakewharton:butterknife-compiler:$butterknfieVersion"
-    compile 'com.android.support:design:24.2.0'
+
+    //image
+    compile "com.facebook.fresco:fresco:$frescoVersion"
+    compile "com.github.stfalcon:frescoimageviewer:$frescoImageViewerVersion"
 }
