--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,11 @@ android {
         versionCode 1
         versionName "1.0"
 
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
     buildTypes {
         release {
+            shrinkResources false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -50,7 +49,7 @@ ext {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.1.2"
     androidTestCompile 'com.android.support:support-annotations:24.2.1'
