--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,17 @@
 buildscript {
     repositories {
         jcenter()
+
+        //fabric
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+
+        //fabric
+        classpath 'io.fabric.tools:gradle:1.+'
+
     }
 }
 
