--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.akarbowy.tagop">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -8,7 +9,8 @@
         android:name=".TagopApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="${appName}"
+        tools:replace="label"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -23,7 +25,7 @@
         </activity>
         <activity
             android:name=".ui.posts.PostsActivity"
-            android:label="@string/title_activity_posts"
+            android:label="${appName}"
             android:parentActivityName=".ui.search.MainSearchActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
