--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,23 @@ android {
         }
 
         applicationVariants.all { variant ->
-            variant.buildConfigField("String", "API_KEY",  getSecretValueOf("API_KEY"))
+            variant.buildConfigField("String", "API_KEY", getSecretValueOf("API_KEY"))
+        }
+    }
+
+    productFlavors {
+        mock {
+            applicationIdSuffix = ".mock"
+        }
+        prod {
+
+        }
+    }
+
+    android.variantFilter { variant ->
+        if (variant.buildType.name.equals('release')
+                && variant.getFlavors().get(0).name.equals('mock')) {
+            variant.setIgnore(true);
         }
     }
 }
@@ -61,18 +77,27 @@ ext {
     frescoImageViewerVersion = '0.1.0'
     crashlyticsVersion = '2.6.4@aar'
     partdefinerVersion = '1.0'
+
+    junitVersion = '4.12'
+    mockitoVersion = '1.10.19'
+    hamcrestVersion = '1.3'
+    robolectricVersion = '3.1.2'
+    annotationsVersion = '24.2.1'
+    runnerVersion = '0.5'
+    espressoVersion = '2.2.2'
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    testCompile "org.robolectric:robolectric:3.1.2"
-    androidTestCompile 'com.android.support:support-annotations:24.2.1'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
+    // Dependencies for tests
+    testCompile "junit:junit:$junitVersion"
+    testCompile "org.mockito:mockito-all:$mockitoVersion"
+    testCompile "org.hamcrest:hamcrest-all:$hamcrestVersion"
+    testCompile "org.robolectric:robolectric:$robolectricVersion"
+    androidTestCompile "com.android.support:support-annotations:$annotationsVersion"
+    androidTestCompile "com.android.support.test:runner:$runnerVersion"
+    androidTestCompile "com.android.support.test.espresso:espresso-core:$espressoVersion"
+    compile "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
     androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2') {
-        // Necessary to avoid version conflicts
         exclude group: 'com.android.support', module: 'appcompat'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude group: 'com.android.support', module: 'support-annotations'
