--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ ext {
     ottoVersion = '1.3.8'
     butterknfieVersion = '8.4.0'
     frescoVersion = '0.13.0'
-    frescoImageViewerVersion = '0.1.0'
+    frescoImageViewerVersion = '0.5.0'
     crashlyticsVersion = '2.6.4@aar'
     partdefinerVersion = '1.0'
 
@@ -134,6 +134,7 @@ dependencies {
     //image
     compile "com.facebook.fresco:fresco:$frescoVersion"
     compile "com.github.stfalcon:frescoimageviewer:$frescoImageViewerVersion"
+    compile "com.facebook.fresco:animated-gif:$frescoVersion"
 
     //crashlytics
     compile("com.crashlytics.sdk.android:crashlytics:$crashlyticsVersion") { transitive = true; }
