--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,13 @@ repositories {
 }
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "com.akarbowy.tagop"
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 4
         versionName "1.1"
 
@@ -59,14 +59,14 @@ android {
     }
 }
 
-def getSecretValueOf(String key) {
+static def getSecretValueOf(String key) {
     def Properties p = new Properties()
     p.load(new FileInputStream(new File("secrets.properties")))
     return "\"" + p.getProperty(key) + "\""
 }
 
 ext {
-    supportLibVersion = '24.2.1'
+    supportLibVersion = '25.1.1'
     retrofitVersion = '2.1.0'
     okHttpVersion = '3.3.1'
     stethoVersion = '1.3.1'
@@ -83,7 +83,7 @@ ext {
     mockitoVersion = '1.10.19'
     hamcrestVersion = '1.3'
     robolectricVersion = '3.1.2'
-    annotationsVersion = '24.2.1'
+    annotationsVersion = '25.1.1'
     runnerVersion = '0.5'
     espressoVersion = '2.2.2'
 }
@@ -97,13 +97,6 @@ dependencies {
     androidTestCompile "com.android.support:support-annotations:$annotationsVersion"
     androidTestCompile "com.android.support.test:runner:$runnerVersion"
     androidTestCompile "com.android.support.test.espresso:espresso-core:$espressoVersion"
-    compile "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
-    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2') {
-        exclude group: 'com.android.support', module: 'appcompat'
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude module: 'recyclerview-v7'
-    }
 
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile "com.android.support:recyclerview-v7:$supportLibVersion"
